--- a/nike/package.json
+++ b/nike/package.json
@@ -19,6 +19,7 @@
     "fast-average-color": "^9.5.0",
     "framer-motion": "^12.15.0",
     "joi": "^17.13.3",
+    "lodash-es": "^4.17.21",
     "node-vibrant": "^4.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -46,6 +47,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.1"
   }
 }
