Your commit message here

--- a/nike/package.json
+++ b/nike/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@pdf-lib/fontkit": "^1.1.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.81.2",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
@@ -21,13 +23,17 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
     "joi": "^17.13.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash-es": "^4.17.21",
     "node-vibrant": "^4.0.3",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
