--- a/nike/package.json
+++ b/nike/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
