--- a/nike/package.json
+++ b/nike/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.3",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.1"
