--- a/nike/package.json
+++ b/nike/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -42,15 +40,17 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
+    "vite-plugin-pwa": "^1.0.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4.1.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -59,7 +59,6 @@
     "postcss": "^8.5.3",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.3",
-    "vite": "^6.3.5",
-    "vite-plugin-pwa": "^1.0.1"
+    "vite": "^6.3.5"
   }
 }
